--- a/Api/Api.csproj
+++ b/Api/Api.csproj
@@ -168,25 +168,42 @@
     <Compile Include="App_Start\FilterConfig.cs" />
     <Compile Include="App_Start\RouteConfig.cs" />
     <Compile Include="App_Start\WebApiConfig.cs" />
-    <Compile Include="Controllers\CategoryController.cs" />
+    <Compile Include="Controllers\ACLayerCategoryController.cs" />
+    <Compile Include="Controllers\ApiTokenController.cs" />
+    <Compile Include="Controllers\AuthenticationController.cs" />
+    <Compile Include="Controllers\CompanyController.cs" />
     <Compile Include="Controllers\ContactController.cs" />
     <Compile Include="Controllers\DisciplineController.cs" />
+    <Compile Include="Controllers\EmailController.cs" />
     <Compile Include="Controllers\HomeController.cs" />
-    <Compile Include="Controllers\LayerController.cs" />
+    <Compile Include="Controllers\ACLayerController.cs" />
+    <Compile Include="Controllers\LogController.cs" />
+    <Compile Include="Controllers\MemberController.cs" />
     <Compile Include="Controllers\ProjectController.cs" />
-    <Compile Include="Controllers\TagAreaTypeController.cs" />
+    <Compile Include="Controllers\ACAreaCategoryController.cs" />
     <Compile Include="EDCContext.cs" />
     <Compile Include="GenericRepository.cs" />
     <Compile Include="Global.asax.cs">
       <DependentUpon>Global.asax</DependentUpon>
     </Compile>
-    <Compile Include="Models\Category.cs" />
+    <Compile Include="Models\ACLayerCategory.cs" />
+    <Compile Include="Models\AESGCM.cs" />
+    <Compile Include="Models\ApiToken.cs" />
+    <Compile Include="Models\Authentication.cs" />
+    <Compile Include="Models\e.cs" />
+    <Compile Include="Models\Company.cs" />
     <Compile Include="Models\Contact.cs" />
     <Compile Include="Models\Discipline.cs" />
-    <Compile Include="Models\Layer.cs" />
+    <Compile Include="Models\ACLayer.cs" />
+    <Compile Include="Models\Email.cs" />
+    <Compile Include="Models\Log.cs" />
+    <Compile Include="Models\Material.cs" />
+    <Compile Include="Models\Member.cs" />
+    <Compile Include="Models\MemberIpAddress.cs" />
     <Compile Include="Models\Project.cs" />
     <Compile Include="Models\Report.cs" />
-    <Compile Include="Models\TagAreaType.cs" />
+    <Compile Include="Models\ACAreaCategory.cs" />
+    <Compile Include="Models\Role.cs" />
     <Compile Include="Models\ViewModels.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="RequireSecureConnectionFilter.cs" />
