updates to materials

--- a/Desktop/Desktop.csproj
+++ b/Desktop/Desktop.csproj
@@ -158,6 +158,9 @@
   <ItemGroup>
     <Content Include="Content\Images\Bambino.min.svg" />
     <Content Include="Content\Scripts\Modules\module.application.js" />
+    <Content Include="Content\Scripts\Modules\module.materialPriceOptions.js" />
+    <Content Include="Content\Scripts\Modules\module.disciplines.js" />
+    <Content Include="Content\Scripts\Modules\module.materials.js" />
     <Content Include="Content\Scripts\Modules\module.log.js" />
     <Content Include="Content\Styles\site.css" />
     <Content Include="favicon.ico" />
