--- a/Api/Api.csproj
+++ b/Api/Api.csproj
@@ -178,6 +178,8 @@
     <Compile Include="Controllers\HomeController.cs" />
     <Compile Include="Controllers\ACLayerController.cs" />
     <Compile Include="Controllers\LogController.cs" />
+    <Compile Include="Controllers\MaterialController.cs" />
+    <Compile Include="Controllers\MaterialPriceOptionController.cs" />
     <Compile Include="Controllers\MemberController.cs" />
     <Compile Include="Controllers\ProjectController.cs" />
     <Compile Include="Controllers\ACAreaCategoryController.cs" />
@@ -198,6 +200,7 @@
     <Compile Include="Models\Email.cs" />
     <Compile Include="Models\Log.cs" />
     <Compile Include="Models\Material.cs" />
+    <Compile Include="Models\MaterialPriceOption.cs" />
     <Compile Include="Models\Member.cs" />
     <Compile Include="Models\MemberIpAddress.cs" />
     <Compile Include="Models\Project.cs" />
