--- a/Api/Api.csproj
+++ b/Api/Api.csproj
@@ -183,6 +183,7 @@
     <Compile Include="Controllers\MemberController.cs" />
     <Compile Include="Controllers\ProjectController.cs" />
     <Compile Include="Controllers\ACAreaCategoryController.cs" />
+    <Compile Include="Controllers\RoleController.cs" />
     <Compile Include="EDCContext.cs" />
     <Compile Include="GenericRepository.cs" />
     <Compile Include="Global.asax.cs">
