--- a/Api/Api.csproj
+++ b/Api/Api.csproj
@@ -185,6 +185,8 @@
     <Compile Include="Controllers\ProjectController.cs" />
     <Compile Include="Controllers\ACAreaCategoryController.cs" />
     <Compile Include="Controllers\ProjectMemberController.cs" />
+    <Compile Include="Controllers\ProjectPhaseController.cs" />
+    <Compile Include="Controllers\ProjectZoneController.cs" />
     <Compile Include="Controllers\RoleController.cs" />
     <Compile Include="Controllers\TimeTrackerController.cs" />
     <Compile Include="Controllers\TimeTrackerProjectController.cs" />
@@ -210,6 +212,11 @@
     <Compile Include="Models\Member.cs" />
     <Compile Include="Models\MemberIpAddress.cs" />
     <Compile Include="Models\Project.cs" />
+    <Compile Include="Models\ProjectAttraction.cs" />
+    <Compile Include="Models\ProjectElement.cs" />
+    <Compile Include="Models\ProjectPhase.cs" />
+    <Compile Include="Models\ProjectWritingDocument.cs" />
+    <Compile Include="Models\ProjectZone.cs" />
     <Compile Include="Models\Report.cs" />
     <Compile Include="Models\ACAreaCategory.cs" />
     <Compile Include="Models\Role.cs" />
