--- a/Desktop/Desktop.csproj
+++ b/Desktop/Desktop.csproj
@@ -146,6 +146,7 @@
   <ItemGroup>
     <Compile Include="App_Start\FilterConfig.cs" />
     <Compile Include="App_Start\RouteConfig.cs" />
+    <Compile Include="Controllers\FileController.cs" />
     <Compile Include="Controllers\HomeController.cs" />
     <Compile Include="Controllers\MethodsController.cs" />
     <Compile Include="Global.asax.cs">
@@ -193,6 +194,9 @@
       <Project>{edfc8b15-c92c-4ddf-a9fb-061053955bfc}</Project>
       <Name>Api</Name>
     </ProjectReference>
+  </ItemGroup>
+  <ItemGroup>
+    <WCFMetadata Include="Connected Services\" />
   </ItemGroup>
   <PropertyGroup>
     <VisualStudioVersion Condition="'$(VisualStudioVersion)' == ''">10.0</VisualStudioVersion>
