--- a/Api/Api.csproj
+++ b/Api/Api.csproj
@@ -54,6 +54,7 @@
     <Reference Include="Microsoft.CSharp" />
     <Reference Include="System" />
     <Reference Include="System.Data" />
+    <Reference Include="System.Data.Linq" />
     <Reference Include="System.Drawing" />
     <Reference Include="System.Linq.Dynamic, Version=1.0.6132.35681, Culture=neutral, processorArchitecture=MSIL">
       <HintPath>..\packages\System.Linq.Dynamic.1.0.7\lib\net40\System.Linq.Dynamic.dll</HintPath>
@@ -168,6 +169,11 @@
     <Compile Include="App_Start\FilterConfig.cs" />
     <Compile Include="App_Start\RouteConfig.cs" />
     <Compile Include="App_Start\WebApiConfig.cs" />
+    <Compile Include="Bambino.designer.cs">
+      <AutoGen>True</AutoGen>
+      <DesignTime>True</DesignTime>
+      <DependentUpon>Bambino.dbml</DependentUpon>
+    </Compile>
     <Compile Include="Controllers\ACLayerCategoryController.cs" />
     <Compile Include="Controllers\ApiTokenController.cs" />
     <Compile Include="Controllers\AuthenticationController.cs" />
@@ -191,8 +197,6 @@
     <Compile Include="Controllers\RoleController.cs" />
     <Compile Include="Controllers\TimeTrackerController.cs" />
     <Compile Include="Controllers\TimeTrackerProjectController.cs" />
-    <Compile Include="EDCContext.cs" />
-    <Compile Include="GenericRepository.cs" />
     <Compile Include="Global.asax.cs">
       <DependentUpon>Global.asax</DependentUpon>
     </Compile>
@@ -219,6 +223,7 @@
     <Compile Include="Models\ProjectPhase.cs" />
     <Compile Include="Models\ProjectWritingDocument.cs" />
     <Compile Include="Models\ProjectZone.cs" />
+    <Compile Include="Models\ProjectZoneArchive.cs" />
     <Compile Include="Models\Report.cs" />
     <Compile Include="Models\ACAreaCategory.cs" />
     <Compile Include="Models\Role.cs" />
@@ -229,7 +234,6 @@
     <Compile Include="Models\ViewModels.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="RequireSecureConnectionFilter.cs" />
-    <Compile Include="UnitOfWork.cs" />
   </ItemGroup>
   <ItemGroup>
     <Content Include="Content\Jquery\jquery-3.3.1.min.js" />
@@ -239,6 +243,14 @@
     <Content Include="ApplicationInsights.config">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </Content>
+    <Content Include="Bambino.dbml">
+      <Generator>MSLinqToSQLGenerator</Generator>
+      <LastGenOutput>Bambino.designer.cs</LastGenOutput>
+      <SubType>Designer</SubType>
+    </Content>
+    <None Include="Bambino.dbml.layout">
+      <DependentUpon>Bambino.dbml</DependentUpon>
+    </None>
     <None Include="Properties\PublishProfiles\Production.pubxml" />
     <Content Include="Web.config" />
     <Content Include="Web.Debug.config">
@@ -255,6 +267,9 @@
   </ItemGroup>
   <ItemGroup>
     <None Include="packages.config" />
+  </ItemGroup>
+  <ItemGroup>
+    <Service Include="{3259AA49-8AA1-44D3-9025-A0B520596A8C}" />
   </ItemGroup>
   <PropertyGroup>
     <VisualStudioVersion Condition="'$(VisualStudioVersion)' == ''">10.0</VisualStudioVersion>
