--- a/Authentication/Authentication.csproj
+++ b/Authentication/Authentication.csproj
@@ -174,6 +174,7 @@
     <Content Include="Content\Scripts\Modules\module.authentication.js" />
     <Content Include="Content\Scripts\Modules\module.global.js" />
     <Content Include="Content\Scripts\Modules\module.js" />
+    <Content Include="Content\Scripts\Modules\module.projectContactCompany.js" />
     <Content Include="Content\Scripts\Modules\module.template.js" />
     <Content Include="Content\Scripts\Modules\module.validation.js" />
     <Content Include="Content\Styles\flex.css" />
